--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "big.js": "5.2.2",
     "intl-messageformat": "^9.3.11",
     "js-joda-timezone": "^2.1.1",
+    "mousetrap": "^1.6.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "semantic-ui-react": "^2.0.1",
-    "shadow-cljs": "2.14.5",
+    "shadow-cljs": "^2.14.5",
     "victory": "^34.3.6"
-  },
-  "devDependencies": {}
+  }
 }
