--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,9 +1,11 @@
 # for google cloud build to ignore in CircleCI builds
 node_modules/
-#target/
+target/
+.shadow-cljs/
+resources/public/js/
 .cpcache/
 .idea/
 .git/
 .gitlibs/
 cloud_sql_proxy
-#*.jar
+*.jar
