--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,10 @@ aliases:
             
       - run:
           name: Install native-image
-          command: $GRAALVM_HOME/graalvm-ce-java11-21.2.0/bin/gu install native-image
+          command: |
+            ls -l $GRAALVM_HOME
+            ls -l $GRAALVM_HOME/graalvm-ce-java11-21.2.0/bin/gu
+            $GRAALVM_HOME/graalvm-ce-java11-21.2.0/bin/gu install native-image
 
       - run: native-image --help
 
