--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,8 @@ aliases:
           command: |
             ls -l $GRAALVM_HOME
             ls -l $GRAALVM_HOME/graalvm-ce-java11-21.2.0/bin/gu
+            ls -l $GRAALVM_HOME/graalvm-ce-java11-21.2.0/lib/installer/bin/gu
+            file $GRAALVM_HOME/graalvm-ce-java11-21.2.0/lib/installer/bin/gu
             $GRAALVM_HOME/graalvm-ce-java11-21.2.0/lib/installer/bin/gu install native-image
 
       - run: native-image --help
