mv installed files

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,10 +36,10 @@ aliases:
           name: Install native-image
           command: |
             ls -l $GRAALVM_HOME
-            ls -l $GRAALVM_HOME/graalvm-ce-java11-21.2.0/bin/gu
-            ls -l $GRAALVM_HOME/graalvm-ce-java11-21.2.0/lib/installer/bin/gu
-            file $GRAALVM_HOME/graalvm-ce-java11-21.2.0/lib/installer/bin/gu
-            $GRAALVM_HOME/graalvm-ce-java11-21.2.0/lib/installer/bin/gu install native-image
+            ls -l $GRAALVM_HOME/bin/gu
+            ls -l $GRAALVM_HOME/lib/installer/bin/gu
+            file  $GRAALVM_HOME/lib/installer/bin/gu
+            $GRAALVM_HOME/bin/gu install native-image
 
       - run: native-image --help
 
