--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ aliases:
   - &build_environnment
     docker:
       # specify the version you desire here
-      - image: circleci/clojure:openjdk-11-lein-2.9.6-bullseye
+      - image: circleci/clojure:openjdk-11-lein-bullseye-node-browsers-legacy
     resource_class: xlarge
     working_directory: ~/repo
     environment:
