back to xlarge (2.5m native image build times, vs 4.25m); both Google Cloud Run links in README: uberjar and native image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ aliases:
     docker:
       # specify the version you desire here
       - image: circleci/clojure:openjdk-11-lein-bullseye-node-browsers-legacy
-    # resource_class: xlarge
-    resource_class: large
+    resource_class: xlarge
+    # resource_class: large
     working_directory: ~/repo
     environment:
       LEIN_ROOT: "true"
