--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,7 +138,7 @@ aliases:
       - run:
           name: Install native dev tools
           command: |
-            sudo apt-get -y install build-essential zlib1g-dev      
+            sudo apt-get -y install build-essential zlib1g-dev upx-ucl
 
       - run:
           command: |
@@ -150,6 +150,9 @@ aliases:
 
       - run: ls -lh feedly-reader-standalone*
 
+      - run: upx -7 -k feedly-reader-standalone
+
+      - run: ls -lh feedly-reader-standalone*
 
       - run:
           command: |
@@ -164,7 +167,7 @@ aliases:
           path: ./target
 
       - store_artifacts:
-          path: ./feedly-reader-standalone
+          path: ./feedly-reader-standalone*
 
 
     # install GCP
